--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -8,82 +8,11 @@
         <%= current_user.email %>
       </div>
     </div>
-  <table class="table table-striped">
-    <% if @contributions %>
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Description</th>
-          <th>Loan Amount</th>
-          <th>Amount Contributed</th>
-          <th>Status</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @contributions.each do |contribution| %>
-          <tr>
-            <% if contribution.loan %>
-              <td><%= link_to contribution.loan.title, contribution_path(contribution) %></td>
-              <td><%= contribution.loan.description %></td>
-              <td><%= contribution.loan.decorate.unit_price_dollars %></td>
-              <td><%= number_to_currency(contribution.amount.to_i/100) %></td>
-              <td><%= contribution.status.capitalize %></td>
-              <td>
-                <div class="form-actions">
-                  <%= link_to 'Cancel', contribution_cancel_path(contribution),
-                    :method => 'post',
-                    :data => { :confirm => 'Are you sure?' },
-                    :class => 'btn btn-danger' %>
-                </div>
-              </td>
-            <% end %>
-          </tr>
-        <% end %>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td><span id="cart-total">
-              <%= number_to_currency(@contribtuion_total) %> TOTAL</span></td>
-            <td></td>
-          </tr>
-      </tbody>
-    <% else %>
-      <tr>
-        <td colspan="5" style="text-align:center;">Your have not made any contributions.</td>
-      </tr>
+  <div class="col-md-12">
+    <% @contributions.each do |contribution| %>
+      <div class="loans transitions-enabled">
+        <%= render partial: 'loan_box', collection: @contributions, as: :contribution %>
+      </div>
     <% end %>
-  </table>
-</div>
-
-<div class="col-md-12">
-  <ul class="nav nav-tabs" role="tablist">
-    <% @categories.each_with_index do |category, i| %>
-      <li class="category-tabs<%= i==0 ? ' active' : '' %>">
-        <a class="tab-control" href="#tab-<%=i + 1 %>"><%= category.name%></a>
-      </li>
-    <% end %>
-  </ul>
-    <% @categories.each_with_index do |category, i| %>
-      <% if category.name == "Newest" %>
-        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
-          <div class="loans transitions-enabled">
-            <%= render partial: 'loan_box', collection: @newest_loans_by_category[category.name], as: :loan %>
-          </div>
-        </div>
-      <% elsif category.name == "All" %>
-        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
-          <div class="loans transitions-enabled">
-            <%= render partial: 'loan_box', collection: @loans, as: :loan %>
-          </div>
-        </div>
-      <% else %>
-        <div class="tab-panel<%= i==0 ? ' active' : ''%>" id="tab-<%= i+1 %>">
-          <div class="loans transitions-enabled">
-            <%= render partial: 'loan_box', collection: @loans_by_category[category.name], as: :loan %>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
+  </div>
 </div>
