--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,39 +1,39 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	<div class="container">
-		<div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a id="mini-keevahh-logo" class="navbar-brand" href="/"><img src="https://s3.amazonaws.com/Keevaah_seed_photos/seed/kevah.png" class="brand" height="40px" width="40px" /></a>
-	      <a class="navbar-brand brand-text" href="/">Keevahh</a>
-	    </div>
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<% if current_user %>
-						<li><%= link_to "My Profile", contributions_path %></li>
-					<% end %>
-				</ul>
-	      <ul class="nav navbar-nav navbar-right">
-				 <li class="active">
-            <%= link_to cart_path do %>
-              <span class="glyphicon glyphicon-shopping-cart"></span>
-              My Cart <span class="badge"><%= cart.contributions.count %></span>
-            <% end %>
-	        </li>
-	        <% if current_user %>
-            <li><%= link_to "Logout", logout_path, method: :delete %></li>
-          <% else %>
-            <li><%= link_to "Login", login_path %></li>
-            <li><%= link_to "Register", new_user_path %></li>
+	<div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+			<a class="navbar-brand" href="/">
+      	<img src="https://s3.amazonaws.com/Keevaah_seed_photos/seed/kevah.png" class="brand" height="40px" width="40px" />
+      	<span class="navbar-brand brand-text" href="/">Keevahh</span>
+			</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<% if current_user %>
+					<li><%= link_to "My Profile", contributions_path %></li>
+				<% end %>
+			</ul>
+      <ul class="nav navbar-nav navbar-right">
+			 <li>
+          <%= link_to cart_path do %>
+            <span class="glyphicon glyphicon-shopping-cart"></span>
+            My Cart <span class="badge"><%= cart.contributions.count %></span>
           <% end %>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</div><!-- /.container -->
+        </li>
+        <% if current_user %>
+          <li><%= link_to "Logout", logout_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Login", login_path %></li>
+          <li><%= link_to "Register", new_user_path %></li>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
