--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-  <% if is_borrower? %>
-		<%= render 'layouts/borrower_navbar' %>
-	<% else %>
-		<%= render 'layouts/navbar' %>
-	<% end %>
+  <div class="container-fluid">
+    <% if is_borrower? %>
+  		<%= render 'layouts/borrower_navbar' %>
+  	<% else %>
+  		<%= render 'layouts/navbar' %>
+  	<% end %>
+  </div>
 
 	<div class="container-fluid">
 	  <% flash.each do |name, msg| %>
