Loans go horizontal instead of vertical

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -111,8 +111,15 @@ a{
   line-height: 15px;
   background: #5cb85c;
 }
-////////////////////// LOAN BOXES///////////////////////////////
 
+
+////////////////////// LOAN BOXES///////////////////////////////
+.lender-image{
+  
+}
+.lender{
+  display: inline;
+}
 
 
 // // NAVBAR //
