Created bootstrap classes for every lender element

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -114,11 +114,40 @@ a{
 
 
 ////////////////////// LOAN BOXES///////////////////////////////
-.lender-image{
-  
-}
-.lender{
+.lender-box{
   display: inline;
+}
+
+.lender-image{
+
+}
+
+.lender-info{
+
+}
+
+.lender-title{
+
+}
+
+.lender-description{
+
+}
+
+.lender-unit-price{
+
+}
+
+.lender-currency{
+
+}
+
+.lender-expires-remains{
+
+}
+
+.lender-cancel{
+
 }
 
 
