--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -115,7 +115,7 @@ a{
 
 ////////////////////// LOAN BOXES///////////////////////////////
 .lender-box{
-  display: inline;
+  
 }
 
 .lender-image{
@@ -146,7 +146,7 @@ a{
 
 }
 
-.lender-cancel{
+.lender-total-cancel{
 
 }
 
