--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,10 +5,11 @@
     <%= form_for(cart, url: cart_path, method: :put) do |cart_form| %>
     <table class="table table-striped table-hover">
       <tr>
-        <th></th>
         <th>Loan</th>
+        <th></th>
+        <th>     </th>
         <th>Amount Contributed</th>
-        <th>Max Contribution</th>
+        <th>Percentage Bar</th>
         <th>Update Amount</th>
       </tr>
       <% if @contributions.any? %>
@@ -22,23 +23,32 @@
               <div class="loan-box">
                 <%= link_to loan_path(contribution_fields.object.loan) do %>
                   <div class="loan-description"><%= contribution_fields.object.loan.title %></div><br/>
-                  <div class="loan-amount"><strong><%= number_to_currency(contribution_fields.object.loan.amount/100) %></strong> out of <strong><%= number_to_currency(contribution_fields.object.loan.pending/100) %></strong> </div><br/>
+                  <div class="loan-amount"><strong><%= number_to_currency(contribution_fields.object.loan.contributed/100) %></strong> out of <strong><%= number_to_currency(contribution_fields.object.loan.amount/100) %></strong> contributed</div><br/>
                 <% end %>
               </div>
+            </td>
+            <td>
+
             </td>
             <td class="col-md-2">
               <%= contribution_fields.select(:amount, contribution_decorator.contribution_range) %>
             </td>
-            <td class="col-md-2"><%= contribution_fields.object.loan.pending %></td>
-            <td class="col-md-2"><%= cart_form.submit %></td>
+            <td class="col-md-4">
+              <div class="progress">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%=contribution_fields.object.loan.progress%>%;"><%=contribution_fields.object.loan.progress%>%</div>
+                <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%=contribution_fields.object.progress %>%;"><%=contribution_fields.object.progress%>%</div>
+              </div>
+            </td>
+            <td class="col-md-3"><%= cart_form.submit class: 'btn btn-warning btn-add-loan btn-sm'  %></td>
           </tr>
         <% end %>
         <tr>
           <td></td>
           <td></td>
           <td></td>
-          <td><span id="cart-total"><%= number_to_currency(cart.total) %> TOTAL</span></td>
           <td></td>
+          <td></td>
+          <td><span>TOTAL:</span> <span id="cart-total"><strong><%= number_to_currency(cart.total) %></strong></span></td>
         </tr>
       </table>
             <div id="checkout-button"><%= link_to "Checkout", review_contributions_path, class: 'btn btn-success' %></div>
