--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -123,7 +123,10 @@ a{
 #cart-total {
   color: #d9534f;
 }
-
+#checkout-button {
+  text-align:right;
+  margin-right: 70px;
+}
 // .page-border {
 //   background-color: white;
 //   border: 3px solid #024;
@@ -224,9 +227,7 @@ a{
 //
 
 //
-// #checkout-button {
-//   text-align:center;
-// }
+
 //
 // // CHECKOUT PAGE //
 // #order-summary {
