forgot remove button

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -127,6 +127,16 @@ a{
   text-align:right;
   margin-right: 70px;
 }
+
+#delete-button{
+  margin-left:15px;
+  margin-top: 30px;
+}
+
+#update-button{
+  margin-left:15px;
+}
+
 // .page-border {
 //   background-color: white;
 //   border: 3px solid #024;
