--- a/app/views/contributions/_lender_box.erb
+++ b/app/views/contributions/_lender_box.erb
@@ -1,36 +1,37 @@
 <% cart.contributions.map {|contribution| contribution.loan_id} %>
-<div class="lender-box col-xs-12">
+<div class="lender-box">
   <div class="lender-image col-xs-2">
-      <%= image_tag contribution.loan.image.url(:small), class: "lender-image" %><br/>
+      <%= image_tag contribution.loan.image.url(:small), class: "lender-image" %>
   </div>
 
-  <div class="lender-info col-xs-3">
+  <div class="lender-info col-xs-6">
     <div class="lender-title">
-      <strong>Loan Title: <%= link_to contribution.loan.title, contribution_path(contribution) %></strong>
+      Loan Title:<strong> <%= link_to contribution.loan.title, contribution_path(contribution) %></strong>
     </div>
     <div class="lender-description">Loan Description:
       <%= contribution.loan.description %>
     </div>
-    <div class="lender-unit-price ">
+    <div class="lender-unit-price ">Total Need:
       <%= contribution.loan.decorate.unit_price_dollars %>
     </div>
   </div>
 
   <div class="lender-analytics col-xs-3">
-    <div class="lender-currency">
+    <div class="lender-currency">You gave:
       <%= number_to_currency(contribution.amount.to_i/100) %>
     </div>
-    <div class="lender-status">
+    <div class="lender-status">Status:
       <%= contribution.status.capitalize %>
     </div>
-    <div class="lender-expires-remains">
-      <strong>Expires in:</strong></br> days</div>
-      <strong>Remaining:</strong></br> %></div>
+    <div class="lender-expires">Expires in:
+      <%= (contribution.loan.requested_by - Date.today).to_i %> days
+    </div>
+    <div class="lender-remaining">Remaining:
+      <%= number_to_currency(contribution.loan.pending/100) %>
     </div>
   </div>
 
-  <div class="lender-total-cancel col-xs-4">
-    <%= number_to_currency(@contribtuion_total) %> TOTAL
+  <div class="lender-cancel col-xs-1">
     <div>
       <%= link_to 'Cancel', contribution_cancel_path(contribution),
         :method => 'post',
