Fixed some format issues

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -121,7 +121,10 @@ a{
   padding-bottom: 5%;
 }
 .lender-box{
-
+  display: inline-block;
+  padding-bottom: 3%;
+  border-bottom-style: outset;
+  padding-top: 3%;
 }
 
 .lender-image{
