--- a/app/views/contributions/_lender_box.erb
+++ b/app/views/contributions/_lender_box.erb
@@ -5,8 +5,8 @@
   </div>
 
   <div class="lender-info col-xs-6">
-    <div class="lender-title">
-      Loan Title:<strong> <%= link_to contribution.loan.title, contribution_path(contribution) %></strong>
+    <div class="lender-title">Loan Title:
+      <strong> <%= link_to contribution.loan.title, contribution_path(contribution) %></strong>
     </div>
     <div class="lender-description">Loan Description:
       <%= contribution.loan.description %>
