--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -45,13 +45,13 @@
             <td></td>
             <td class="col-md-3 "><%= cart_form.submit class: 'btn btn-warning btn-sm', id: "update-button"   %>
         <% end %>
-        <% cart.contributions.each do |contribution|%>
-            <%= link_to 'Remove from cart', contribution_path(contribution),
-          method: 'delete',
-          data: { confirm: 'Are you sure you want to cancel this loan request?' },
-          class: 'btn btn-sm btn-default', id: "delete-button" %>
-        </td>
-        <% end %>
+          <% cart.contributions.each do |contribution|%>
+            <%= form_for(:cart, url: cart_path, method: :delete) do |f| %>
+              <%= f.hidden_field :contribution_id, value: contribution.id %>
+              <%= f.submit "Remove From Cart", class: "btn btn-sm btn-default", id: "delete-button" %>
+            <% end %>
+            </td>
+          <% end %>
         </tr>
         <tr>
           <td></td>
