--- a/app/views/contributions/_lender_box.erb
+++ b/app/views/contributions/_lender_box.erb
@@ -29,6 +29,10 @@
     <div class="lender-remaining">Remaining:
       <%= number_to_currency(contribution.loan.pending/100) %>
     </div>
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%=contribution.loan.progress%>%;"><%=contribution.loan.progress%>%</div>
+    </div>
+
   </div>
 
   <div class="lender-cancel col-xs-1">
