--- a/app/views/contributions/show.html.erb
+++ b/app/views/contributions/show.html.erb
@@ -5,7 +5,7 @@
 
   <dl class="dl-horizontal">
     <dt><strong>Borrower:</strong></dt>
-    <dd><%= @contribution.loan.user.first_name %></dd>
+    <dd><%= @contribution.loan.first_name %></dd>
     <dt><strong>Description:</strong></dt>
     <dd><%= @contribution.loan.description %></dd>
     <dt><strong>Amount:</strong></dt>
