--- a/app/views/layouts/_borrower_navbar.html.erb
+++ b/app/views/layouts/_borrower_navbar.html.erb
@@ -17,7 +17,7 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><%= link_to "My Dashboard", borrower_path %></li>
-	        <li><%= link_to "Apply For A New Loan", new_borrower_loan_path %></li>
+	        <li><%= link_to "Apply For A Loan", new_borrower_loan_path %></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 	        <% if current_user %>
