change css colors from words to hex numbers

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -111,7 +111,7 @@ a{
   height: 15px;
   border-radius: 25px;
   margin-bottom: 10px;
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
 }
 
 .progress-bar{
@@ -149,23 +149,23 @@ a{
 }
 
 .lender-unit-price{
-  color: forestgreen;
+  color: #266a2e;
 }
 
 .lender-status{
-  color: chocolate;
+  color: #d2691e;
 }
 
 .lender-currency{
-  color: forestgreen;
+  color: #266a2e;
 }
 
 .lender-expires{
-  color: blueviolet;
+  color: #4c50a9;
 }
 
 .lender-remaining{
-  color: darkseagreen;
+  color: #8fbc8f;
 }
 
 .lender-cancel{
