--- a/app/views/contributions/confirmation.html.erb
+++ b/app/views/contributions/confirmation.html.erb
@@ -19,33 +19,35 @@
         <th class="col-sm-1"></th>
       </tr>
         <% @contributions.each do |contribution| %>
-          <td><%= link_to (image_tag(contribution.loan.image.url(:small))), loan_path(contribution.loan) %></td>
-          <td><%= link_to "#{contribution.loan.title}", loan_path(contribution.loan) %></td>
-          <td><%= number_to_currency(contribution.amount.to_i/100) %></td>
-          <td><div class="progress">
-            <div class="progress-bar progress-bar-success"
-              role="progressbar"
-              aria-valuenow="60"
-              aria-valuemin="0"
-              aria-valuemax="100"
-              style="width: <%=contribution.loan.progress%>%;">
-              <%=contribution.loan.progress%>%</div>
-            <div class="progress-bar progress-bar-info"
-              role="progressbar"
-              aria-valuenow="60"
-              aria-valuemin="0"
-              aria-valuemax="100"
-              style="width: <%=contribution.progress %>%;">
-              <%=contribution.progress%>%</div>
-          </div></td>
-          <td></td>
+          <tr>
+            <td><%= link_to (image_tag(contribution.loan.image.url(:small))), loan_path(contribution.loan) %></td>
+            <td><%= link_to "#{contribution.loan.title}", loan_path(contribution.loan) %></td>
+            <td><%= number_to_currency(contribution.amount.to_i/100) %></td>
+            <td><div class="progress">
+              <div class="progress-bar progress-bar-success"
+                role="progressbar"
+                aria-valuenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: <%=contribution.loan.progress%>%;">
+                <%=contribution.loan.progress%>%</div>
+              <div class="progress-bar progress-bar-info"
+                role="progressbar"
+                aria-valuenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: <%=contribution.progress %>%;">
+                <%=contribution.progress%>%</div>
+            </div></td>
+            <td></td>
+          </tr>
         <% end %>
         <tr>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <td><span>TOTAL:</span> <span id="cart-total"><strong><%= number_to_currency(25.00) %></strong></span></td>
+          <td><span>TOTAL:</span> <span id="cart-total"><strong><%= number_to_currency(@contribution_total) %></strong></span></td>
         </tr>
       </table>
     <div id="checkout-button"><%= link_to "Home", root_path, class: 'btn btn-info' %></div>
