--- a/app/views/loans/show.html.erb
+++ b/app/views/loans/show.html.erb
@@ -1,36 +1,65 @@
 <%- model_class = Loan -%>
 <div class="page-border">
   <div class="page-header">
-    <h1><%= @loan.title %></h1>
+    <h1><%= @loan.title.capitalize %></h1>
   </div>
+  <table class="table table-striped table-hover">
+    <tr>
+      <th>Loan</th>
+      <th></th>
+      <th></th>
+      <th>Percentage Complete</th>
+      <th>Requested By:</th>
+      <th>Repayments Will Begin On:</th>
+    </tr>
+      <tr>
+        <td class="col-md-2">
+          <%= link_to (image_tag(@loan.image.url(:small))), loan_path(@loan) %>
+        </td>
+        <td class="col-md-2">
+          <div class="loan-box">
+            <%= link_to loan_path(@loan) do %>
+              <div class="loan-description"><%= @loan.title.capitalize %></div><br/>
+              <div class="loan-amount"><strong><%= number_to_currency(@loan.contributed/100) %></strong> out of <strong><%= number_to_currency(@loan.amount/100) %></strong> contributed so far</div><br/>
+            <% end %>
+          </div>
+        </td>
+        <td class="col-md-2">
+          <div class="loan-box">
 
-  <dl class="dl-horizontal">
-    <dt><strong>Description:</strong></dt>
-    <dd><%= @loan.description %></dd>
-    <dt><strong>Categories:</strong></dt>
-    <dd><%= @loan.display_categories %></dd>
-    <dt><strong>Amount:</strong></dt>
-    <dd><%= @loan.amount_in_dollars %></dd>
-    <dt><strong>Your monthly payment:</strong></dt>
-    <dd><%= @loan.monthly_payment_in_dollars %></dd>
-    <dt><strong>Requested By:</strong></dt>
-    <dd><%= @loan.requested_by %></dd>
-    <dt><strong>Repayments begin:</strong></dt>
-    <dd><%= @loan.repayments_begin %></dd>
-    <dt><strong>Loan Status</strong></dt>
-    <dd><%= @loan.aasm_state %></dd>
-    <dt><strong>Image:</strong></dt>
-    <dd><%= image_tag @loan.image.url(:medium) %></dd>
-  </dl>
+            <%= link_to loan_path(@loan) do %>
+              <div class="loan-description"><%= @loan.description %></div><br/>
+            <% end %>
+          </div>
+        </td>
+        <td class="col-md-2">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%=@loan.progress%>%;"><%=@loan.progress%>%</div>
+          </div>
+        </td>
 
-  <span class="add-loan">
-    <%= form_for(:cart, url: cart_path, method: :put) do |f| %>
-      <%= f.hidden_field :loan_id, value: @loan.id %>
-      <%= f.hidden_field :quantity, value: 1 %>
-      <!-- <%= f.hidden_field :amount, value: (25..500).step(5).map{ |n| n } %><br/> -->
-      <%= button_tag type: 'submit', class: 'btn btn-primary btn-add-loan' do %>
-        <span class='glyphicon glyphicon glyphicon-globe'></span> Loan Now
-      <% end %>
-    <% end %>
-  </span>
+        <td class="col-md-2"><%= @loan.requested_by %></td>
+
+        <td class="col-md-2"><%= @loan.repayments_begin %></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>
+        <span class="add-loan">
+          <%= form_for(:cart, url: cart_path, method: :put) do |f| %>
+            <%= f.hidden_field :loan_id, value: @loan.id %>
+            <%= f.hidden_field :quantity, value: 1 %>
+            <!-- <%= f.hidden_field :amount, value: (25..500).step(5).map{ |n| n } %><br/> -->
+            <%= button_tag type: 'submit', class: 'btn btn-success btn-add-loan' do %>
+              <span class='glyphicon glyphicon glyphicon-globe'></span> Loan Now
+            <% end %>
+          <% end %>
+        </span>
+      </td>
+    </tr>
+  </table>
 </div>
