makes footer static

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
   		<%= yield %>
   	</div>
 
-	<footer class="footer navbar-fixed-bottom">
+	<footer class="footer navbar-static-bottom">
 		<div class="container">
 			<p>A <%= link_to "Turing.io", "http://www.turing.io", id: "turing-link" %> project.</p>
 		</div>
