--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -7,6 +7,38 @@
 //
 
 // FONTS //
+.navbar-brand {
+  margin-left: 0px;
+  font-size: $font-size-large;
+  line-height: 50px;
+  height: 50px;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
+
+  @media (min-width: $grid-float-breakpoint) {
+    .navbar > .container &,
+    .navbar > .container-fluid & {
+    }
+  }
+}
+
+.navbar-inverse {
+  background-color: $navbar-inverse-bg;
+  border-color: $navbar-inverse-border;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  .navbar-brand {
+    color: $navbar-inverse-brand-color;
+    &:hover,
+    &:focus {
+      color: white;
+    }
+  }
+}
 
 $font-family-sans-serif: 'Helvetica', sans-serif;
 
