fix progress bar

--- a/app/views/contributions/_lender_box.erb
+++ b/app/views/contributions/_lender_box.erb
@@ -30,7 +30,7 @@
       <%= number_to_currency(contribution.loan.pending/100) %>
     </div>
     <div class="progress">
-      <div class="progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%=contribution.loan.progress%>%;"><%=contribution.loan.progress%>%</div>
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%=contribution.loan.progress%>%;"><%=contribution.loan.progress%>%</div>
     </div>
 
   </div>
