--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -8,11 +8,10 @@
 
 // FONTS //
 .navbar-brand {
-  margin-left: 0px;
   font-size: $font-size-large;
   line-height: 50px;
   height: 50px;
-  color: $navbar-inverse-brand-color;
+  margin-top: -15px;
 
   &:hover,
   &:focus {
