--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -63,6 +63,7 @@
         <div id="checkout-button"><%= link_to "Checkout", review_contributions_path, class: 'btn btn-success' %></div>
       <% else %>
           <td colspan="5" style="text-align:center;">Your cart is empty.</td>
+        </table>
       <% end %>
   <% end %>
   </div>
