--- a/app/views/borrower/loans/dashboard.html.erb
+++ b/app/views/borrower/loans/dashboard.html.erb
@@ -26,7 +26,7 @@
                     <%= link_to 'Cancel', borrower_loan_path(loan),
                     method: 'delete',
                     data: { confirm: 'Are you sure you want to cancel this loan request?' },
-                    class: 'btn btn-danger' %>
+                    class: 'btn btn' %>
                 </td>
               <% end %>
             </tr>
