--- a/app/views/contributions/index.html.erb
+++ b/app/views/contributions/index.html.erb
@@ -2,7 +2,7 @@
   <div class="page-header">
     <h1>The People You Support</h1>
       <div id="profile">
-        <%= link_to "Edit My Profile", edit_user_path(current_user), :class => 'btn-xs btn-primary' %><br/><br/>
+        <%= link_to "Edit My Profile", edit_user_path(current_user), :class => 'btn btn-primary' %><br/><br/>
         <%= current_user.first_name %> <%= current_user.last_name %>
         <%= current_user.email %>
       </div>
