--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="page-border">
   <div class="container" style="width: 100%">
-    <%= link_to "<< Back to Menu", root_path %>
+    <%= link_to "Back to Menu", root_path, class:"btn btn-mini btn-success"%>
     <span id="my-cart-title"><h2>My Cart</h2></span>
     <%= form_for(cart, url: cart_path, method: :put) do |cart_form| %>
     <table class="table table-striped table-hover">
