--- a/app/views/contributions/confirmation.html.erb
+++ b/app/views/contributions/confirmation.html.erb
@@ -1,12 +1,10 @@
 <div class="page-border">
   <div class="container" style="width: 100%">
-    <%= link_to "<< Back to Menu", root_path %>
-    <span id="my-cart-title"><h2>Contribution Confirmation</h2></span>
-    <div id="contricution-confirmation">
-      <h3>Congratulations!</h3>
-      <h5>Thanks to your contribution, _____________________</h5>
+    <%= link_to "Back to Menu", root_path, class:"btn btn-mini btn-success"%>
+    <span id="my-cart-title"><h2>Congratulations! <%= current_user.first_name %></h2></span>
+    <div id="contribution-confirmation">
       <p>
-        Contributing to loans on Keevaah helps change lives every day. Look forward to email updates detailing the specifics of your loan recipients' life-changing............
+        Contributing to loans on Keevaah helps change lives every day. Look forward to email updates detailing the specifics of your loan recipients' progress due to your life changing contribution.
       </p>
     </div>
 
@@ -50,7 +48,7 @@
           <td><span>TOTAL:</span> <span id="cart-total"><strong><%= number_to_currency(@contribution_total) %></strong></span></td>
         </tr>
       </table>
-    <div id="checkout-button"><%= link_to "Home", root_path, class: 'btn btn-info' %></div>
+    <div id="checkout-button"><%= link_to "Home", root_path, class: 'btn btn-default' %></div>
 
     <div id="MOAR-LOANS">
       <h1>Feeling good?</h1>
