--- a/app/views/contributions/confirmation.html.erb
+++ b/app/views/contributions/confirmation.html.erb
@@ -1,7 +1,7 @@
 <div class="page-border">
   <div class="container" style="width: 100%">
     <%= link_to "Back to Menu", root_path, class:"btn btn-mini btn-success"%>
-    <span id="my-cart-title"><h2>Congratulations! <%= current_user.first_name %></h2></span>
+    <span id="my-cart-title"><h2>Congratulations <%= current_user.first_name %>!</h2></span>
     <div id="contribution-confirmation">
       <p>
         Contributing to loans on Keevaah helps change lives every day. Look forward to email updates detailing the specifics of your loan recipients' progress due to your life changing contribution.
