fix cancel button

--- a/app/views/contributions/_lender_box.erb
+++ b/app/views/contributions/_lender_box.erb
@@ -41,7 +41,7 @@
         <%= link_to 'Cancel', contribution_cancel_path(contribution),
           :method => 'post',
           :data => { :confirm => 'Are you sure?' },
-          :class => 'btn-sm btn' %>
+          :class => 'btn btn-sm btn-default' %>
       </div>
     <% end %>
   </div>
