--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -43,6 +43,7 @@ div.flash.error   { border: 2px solid #d9534f; 	 color: #d9534f;}
 // BODY //
 body {
    padding-top: 85px;
+   padding-bottom: 50px;
    color: #828587;
 }
 
