fix remove button

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -47,6 +47,10 @@ body {
    color: #828587;
 }
 
+a:hover{
+  color: #5cb85c;
+}
+
 $body-bg: #fff;
 
 // BODY //
@@ -238,9 +242,17 @@ a{
   margin-right: 70px;
 }
 
+#cart-actions{
+  position: relative;
+}
+
+.contribution-amounts{
+  text-align: right;
+}
+
 #delete-button{
+  position: absolute;
   margin-left:15px;
-  margin-top: 30px;
 }
 
 #update-button{
