--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -39,13 +39,13 @@
               </div>
               <div>This loan with be <strong><%=contribution_fields.object.progress%>%</strong> complete with your contribution</div>
             </td>
-            <td class="col-md-2" id="contribution_amount">
+            <td class="col-md-2 contribution_amount" id="contribution_amount", style="text-align: right;">
               <%= contribution_fields.select(:amount, contribution_decorator.contribution_range) %>
             </td>
             <td></td>
-            <td class="col-md-3 ">
+            <td class="col-md-3" id="cart-actions">
               <%= cart_form.submit class: 'btn btn-warning btn-sm', id: "update-button"   %>
-              <%= link_to 'Remove From Cart', contribution_delete_path(contribution_fields.object),:method => 'post',:data => { :confirm => 'Are you sure?' },class: "btn btn-sm btn-default",id: "delete-button" %>
+              <%= link_to 'Remove', contribution_delete_path(contribution_fields.object),:method => 'post',:data => { :confirm => 'Are you sure?'},id: "delete-button" %>
             </td>
         <% end %>
         </tr>
