login prompt change also changes markup on confirmation and review page

--- a/app/views/contributions/review.html.erb
+++ b/app/views/contributions/review.html.erb
@@ -27,15 +27,13 @@
     </tr>
 </table>
 <div class="col-md-8 pull-left">
-  <h1 id="best-contribution">
-    Your contribution is the best!
-  </h1>
-  <h3>
-    You are helping this person immensely.
-  </h3>
-  <h3>
-    I hope this helps you assuage your white guilt. Have a nice day!
-  </h3>
+  <h1>Kiva Fact:</h1>
+  <h2 id="best-contribution">
+    All Kiva loans are made possible by our Field Partners, who vet, administer, and disburse each loan.
+  </h2>
+  <h4>
+    Many of our partners are chosen because in addition to lending money, they also offer services such as savings, financial literacy training and empowerment programs.
+  </h4>
 </div>
 <div class="col-md-4 pull-right">
   <%= hidden_field_tag :stripe_card_token %>
@@ -70,6 +68,10 @@
       <option value='18'>2018</option>
       <option value='19'>2019</option>
       <option value='20'>2020</option>
+      <option value='20'>2021</option>
+      <option value='20'>2022</option>
+      <option value='20'>2023</option>
+      <option value='20'>2024</option>
     </select></br></br>
     <%= submit_tag "Checkout", class: "btn btn-primary" %>
   </div>
