--- a/app/views/contributions/confirmation.html.erb
+++ b/app/views/contributions/confirmation.html.erb
@@ -3,9 +3,17 @@
     <%= link_to "Back to Menu", root_path, class:"btn btn-mini btn-success"%>
     <span id="my-cart-title"><h2>Congratulations <%= current_user.first_name %>!</h2></span>
     <div id="contribution-confirmation">
-      <p>
-        Contributing to loans on Keevaah helps change lives every day. Look forward to email updates detailing the specifics of your loan recipients' progress due to your life changing contribution.
-      </p>
+      <ol>
+        <li>
+          Throughout the life of the loan, you will see progress updates from Keevahh through your email, and if you come back to the site.
+        </li>
+        <li>
+          As the borrower repays the loan, the money becomes available in your account. This is called your <strong>Keevahh Credit.</strong>
+        </li>
+        <li>
+          Then can use it to fund another loan, donate it to Kiva, or withdraw it to spend on something else
+        </li>
+      </ol>
     </div>
 
     <table class="table table-striped table-hover">
