fixes up confrimation page

--- a/app/views/contributions/confirmation.html.erb
+++ b/app/views/contributions/confirmation.html.erb
@@ -1,7 +1,7 @@
 <div class="page-border">
   <div class="container" style="width: 100%">
     <%= link_to "Back to Menu", root_path, class:"btn btn-mini btn-success"%>
-    <span id="my-cart-title"><h2>Congratulations <%= current_user.first_name %>!</h2></span>
+    <span id="my-cart-title"><h2 id="best-contribution">Congratulations <%= current_user.first_name %>!</h2></span>
     <div id="contribution-confirmation">
       <ol>
         <li>
