--- a/app/views/contributions/confirmation.html.erb
+++ b/app/views/contributions/confirmation.html.erb
@@ -52,7 +52,7 @@
 
     <div id="MOAR-LOANS">
       <h1 id="best-contribution">Feeling good?</h1>
-      <h3>Based on your recent generocity, you might like to contribute to these other loans:</h3>
+      <h3>Based on your recent generosity, you might like to contribute to these other loans:</h3>
       <div class="loans transitions-enabled">
         <%= render partial: 'loan_box', collection: @suggestions, as: :loan %>
       </div>
